tests/rosetta/out/Scala/4-rings-or-4-squares-puzzle.error
scalac: exit status 1
/tmp/4-rings-or-4-squares-puzzle.scala:29: error: not found: type any
  def getCombs(low: Int, high: Int, unique: Boolean): Map[String, any] = {
                                                                  ^
/tmp/4-rings-or-4-squares-puzzle.scala:61: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: List[List[Int]]
    return Auto1(count = count, list = valid)
                                       ^
two errors found
